# eamxx-scripts

./: README.md
4d_interp/: horiz_interp.py  test_horiz_interp.py  test_horiz_interp_basic.py  test_horiz_interp_mpi.py
amip-decadal-output/: 20240116_ARM_sites_for_decadal.csv  20240123_ARM_GPM_sites_for_decadal_dmn.csv  Decadal_Regional_Sites_key.csv
analysis-scripts/: diags_utils.py  single_run_v1_diags.py  summarize_e3sm_diags.py  test_IC.py  test_qv_sat.py  v0vsv1_comparison_diags.py
boiler-plate/: basic_boiler_plate_p3.py
kokkos-reproducer/: CMakeLists.txt  do-cmake.sh  main.cpp
micro-apps/: CMakeLists.txt  README.md  test-all  test-all-li
micro-apps/lin-interp/: CMakeLists.txt  li_alg.hpp  li_alg_driver.cpp  li_common.cpp  li_common.hpp  li_cpp_bridge.f90  li_kokkos.hpp  li_kokkos_driver.cpp  li_perf_cmp.cpp  li_ref.f90  li_ref_driver.cpp  li_unit_test.cpp  li_vanilla.hpp  li_vanilla_driver.cpp  li_vect.hpp  li_vect_driver.cpp  types.f.h
micro-apps/lin-interp/report/: report.tex
micro-apps/micro-sed/: CMakeLists.txt  README.md  array_io.cpp  array_io.hpp  cmp.hpp  initial_conditions.cpp  initial_conditions.hpp  micro_app_common.hpp  p3_final_driver.cpp  p3_ref.f90  p3_vanilla.hpp  perf_cmp.cpp  run_and_cmp.cpp  types.f.h
micro-apps/nano/: CMakeLists.txt
micro-apps/nano/tridiag/: CMakeLists.txt  Makefile  make.inc.blake  make.inc.bowman  make.inc.v100  make.inc.white  make.inc.ws  tridiag.cpp
micro-apps/nano/tridiag/report/: cdata.sh  compare.sh  tdp.hy  tdp.tex
micro-apps/nano/vec/: CMakeLists.txt  vec.cpp
micro-apps/p3/: CMakeLists.txt  README  README.md  array_io.cpp  array_io.hpp  array_io_mod.f90  cmp.hpp  cpp_bridge.f90  fvec.f90  initial_conditions.cpp  initial_conditions.hpp  initial_conditions_mod.f90  kokkos_util.hpp  micro_app_common.hpp  micro_kokkos.hpp  micro_sed.f90  micro_sed_driver.cpp  micro_sed_driver.f90  micro_sed_pack_driver_kokkos.cpp  micro_sed_pack_kokkos.hpp  micro_sed_packnoi_driver_kokkos.cpp  micro_sed_packnoi_kokkos.hpp  micro_sed_packnoiws_driver_kokkos.cpp  micro_sed_packnoiws_kokkos.hpp  micro_sed_vanilla.hpp  micro_sed_vanilla_driver.cpp  micro_sed_vanilla_driver_kokkos.cpp  micro_sed_vanilla_kokkos.hpp  micro_sed_workspace_driver_kokkos.cpp  micro_sed_workspace_kokkos.hpp  micro_sed_wrap.hpp  micro_util.hpp  p3_common.hpp  p3_constants.hpp  p3_final.cpp  p3_final.hpp  p3_final_driver.cpp  p3_final_impl.hpp  p3_functions.hpp  p3_functions_find.cpp  (+28 more)
micro-apps/perf-results/: official-2019-10-09
micro-apps/perf-results/2018_09_18/: blake  bowman  waterman
micro-apps/perf-results/contiguous/: blake  bowman  waterman
micro-apps/perf-results/non-contiguous/: blake  bowman  waterman
micro-apps/perf-results/performance-1colinit-repeats-2018-09-28/: blake  bowman  waterman
micro-apps/perf-results/performance-2018_09_27/: blake  bowman  waterman
micro-apps/perf-results/performance-eti-2018-11-19/: blake  bowman  waterman  white
micro-apps/perf-results/performance-fulltest-2018-10-27/: blake  bowman  waterman
micro-apps/perf-results/performance-fulltest-white-2018-11-06/: blake  bowman  white
micro-apps/perf-results/performance-master-2018-11-18/: blake  bowman  waterman  white
micro-apps/perf-results/performance-packnoi-2018-10-09/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-10-16/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-10-21/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-10-23/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-10-23-2/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-10-26/: blake  bowman  waterman
micro-apps/perf-results/performance-packnoiws-2018-1016/: blake  bowman  waterman
micro-apps/perf-results/performance-packworkspace-2018-10-01/: blake  bowman  waterman
micro-apps/perf-results/performance-packworkspace2-2018-10-01/: blake  bowman  waterman
micro-apps/perf-results/performance-peter-2018-09-18/: blake
micro-apps/perf-results/performance-prunedrepo-2018-10-30/: blake  bowman  waterman
micro-apps/perf-results/performance-repeat-driver/: blake  bowman  waterman
micro-apps/perf-results/performance-templates-2018-11-02/: blake  bowman  waterman
micro-apps/perf-results/performance-templates-white-2018-11-06/: blake  bowman  white
micro-apps/perf-results/performance-workspace-2018-10-01/: blake  bowman  waterman
micro-apps/pyeamxx/: CMakeLists.txt  pyeamxx
micro-apps/share/: CMakeLists.txt  kokkos_util.hpp  micro_kokkos.hpp  scream_arch.cpp  scream_assert.hpp  scream_pack.hpp  share_unit_test.cpp  util.cpp  util.hpp  wsm.hpp  wsm_impl.hpp
nc2bgeo_movies/: nc2bgeo.py  run_nc2bgeo.py
perf-scripts/: gather-all-data  gather_all_data  gather_all_data.py  perf-analysis  perf_analysis  perf_analysis.py  plot  plot_e3sm.py  test-all-scream  test_all_scream.py  tools.py  utils.py
post-run_scripts/: Create_U10_V10_netcdf.py  Globus_h1_send.txt  README.txt  append_longname_to_files.sh  batch_zstash_create.sh  check_Cess_output.py  eamxx_ncclimo_decadal.sh  moving_ne1024_files_nocheck_to_storage.sh  moving_ne1024_files_to_storage.sh  moving_scream_restart_files_to_storage.sh  regrid_multi_ne1024_files_lowrezOutput.sh  regrid_ne1024_2D_to_256x512.sh  regrid_ne1024_3D_256x512.sh  regrid_ne1024_largememory_to_256x512.sh  s2e.py
preprocessing_scripts/: check_initial_conditions.py  check_values.py  convert_cami_to_screami.py  convert_script_ne1024_ERA5.sh  create_spa_remap_files.sh  extract_gas_constituents_from_v0.py  vertical_remap.py
prescribed-aero_scripts/: make_presc_aero.csh  run_e3sm.ne30_writePresAero.csh
regional_output_sites/: 20221123_ARM_sites.csv  20221221_ARM_sites_med_domain.csv  20221221_ARM_sites_sml_domain.csv  20230705_ACI_regions.csv  20230705_ARM_sites_for_Cess.csv  20230914_ACI_regions_for_Cess_key.csv  20230914_ARM_site_for_Cess_key.csv  20230925_ACI_regions_for_Cess_ne256_key.csv  20230925_ACI_regions_for_Cess_ne30_key.csv  20230925_ARM_site_for_Cess_ne256_key.csv  (+1 more)
shoc-port/: Makefile  (+4 more)
(+268 files in other folders)
