add_executable (nanotridiag tridiag.cpp)
target_compile_definitions (nanotridiag PRIVATE -DVEC_PACKN=13)
set (TRIDIAG_DP 0)
if (${SCREAM_DOUBLE_PRECISION})
  set (TRIDIAG_DP 1)
endif ()
target_compile_definitions (nanotridiag PRIVATE -DVEC_PACKN=13 -DTRIDIAG_DOUBLE_PRECISION=${TRIDIAG_DP})
target_link_libraries (nanotridiag ${SCREAM_MICRO_APPS_LIBRARIES})
set_target_properties (nanotridiag PROPERTIES LINK_FLAGS ${SCREAM_MICRO_APPS_LINK_FLAGS})
add_test(nanotridiag nanotridiag)
